# astroid

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  History.txt  LICENSE.md  README.md  ReleaseNotes.txt  SConstruct  Vagrantfile  meson.build  meson_options.txt  shell.nix
.github/: FUNDING.yml
.github/workflows/: ci-debian-build-test.yml
cmake/: FindGObjectIntrospection.cmake  FindNotmuch.cmake  GObjectIntrospectionMacros.cmake  InstallSymbolicLink.cmake
devel/: get_keys.py  make_compile_commands.sh
doc/: astroid.1.scd
examples/: astroid  poll.sh
examples/plugins/: basic.plugin  basic.py  tagformat.plugin  tagformat.py
lib/: gulp.rb
lib/gulp/: db.rb  logger.rb  main.rb  main_window.rb  util.rb  version.rb
lib/gulp/logger/: singleton.rb
lib/gulp/modes/: help.rb  log.rb  thread_index.rb
lib/gulp/util/: singleton.rb
site_scons/site_tools/: notmuch_test_db.py  shellscript.py  unittest.py
src/: account_manager.cc  account_manager.hh  astroid.cc  astroid.hh  build_config.hh.in  chunk.cc  chunk.hh  command_bar.cc  command_bar.hh  compose_message.cc  compose_message.hh  config.cc  config.hh  contacts.cc  contacts.hh  crypto.cc  crypto.hh  db.cc  db.hh  gmime_iostream.cc  gmime_iostream.hh  gulp.cc  gulp.hh  log.cc  log.hh  main.cc  main_window.cc  main_window.hh  message.cc  message.hh  message_thread.cc  message_thread.hh  poll.cc  poll.hh  proto.hh  thread_index.cc  thread_index.hh
src/actions/: action.cc  action.hh  action_manager.cc  action_manager.hh  archive_action.cc  archive_action.hh  cmdaction.cc  cmdaction.hh  difftag_action.cc  difftag_action.hh  onmessage.cc  onmessage.hh  star_action.cc  star_action.hh  tag_action.cc  tag_action.hh  toggle_action.cc  toggle_action.hh  undo_manager.cc  undo_manager.hh  undomanager.cc
src/modes/: edit_message.cc  edit_message.hh  fail_mode.cc  fail_mode.hh  forward_message.cc  forward_message.hh  help_mode.cc  help_mode.hh  keybindings.cc  keybindings.hh  log_view.cc  log_view.hh  mode.cc  mode.hh  paned_mode.cc  paned_mode.hh  raw_message.cc  raw_message.hh  reply_message.cc  reply_message.hh  saved_searches.cc  saved_searches.hh  thread_index.cc  thread_index.hh  thread_index_list_cell_renderer.cc  thread_index_list_cell_renderer.hh  thread_index_list_view.cc  thread_index_list_view.hh  thread_view.cc  thread_view.hh
src/modes/editor/: editor.cc  editor.hh  external.cc  external.hh  plugin.cc  plugin.hh
src/modes/thread_index/: query_loader.cc  query_loader.hh  thread_index.cc  thread_index.hh  thread_index_list_cell_renderer.cc  thread_index_list_cell_renderer.hh  thread_index_list_view.cc  thread_index_list_view.hh
src/modes/thread_view/: dom_utils.cc  dom_utils.hh  page_client.cc  page_client.hh  theme.cc  theme.hh  thread_view.cc  thread_view.hh  web_inspector.cc  web_inspector.hh
src/modes/thread_view/webextension/: ae_protocol.cc  ae_protocol.hh  dom_utils.cc  dom_utils.hh  messages.proto  tvextension.cc  tvextension.hh
src/plugin/: astroid_activatable.c  astroid_activatable.h  gir_main.c  manager.cc  manager.hh  thread_index_activatable.c  thread_index_activatable.h  thread_view_activatable.c  thread_view_activatable.h
src/utils/: address.cc  address.hh  cmd.cc  cmd.hh  compiler.h  date_utils.cc  date_utils.hh  gravatar.cc  gravatar.hh  mail_quote.cc  mail_quote.hh  resource.cc  resource.hh  ustring_utils.cc  ustring_utils.hh  utils.cc  utils.hh  vector_utils.cc  vector_utils.hh
src/utils/gmime/: gmime-compat.cc  gmime-compat.h  gmime-filter-html-bq.c  gmime-filter-html-bq.h  gtrie.c  gtrie.h  url-scanner.c  url-scanner.h
test/: .gitignore  SConscript  foo1.key  foo2.key  forktee.sh  forktee2.sh  test_address.cc  test_bad_content_id.cc  test_common.hh  test_composed_message.cc  test_convert_error.cc  test_crypto.cc  test_dates.cc  test_generic.cc  test_keybindings.cc  test_mime_message.cc  test_no_newline_msg.cc  test_non_existant_file.cc  test_notmuch.cc  test_notmuch_standalone.cc  test_notmuch_standalone.sh  test_open_db.cc  test_theme.cc
test/mail/: test_out_of_sync.eml
test/mail/test_mail/: bad-content-part-id.eml  isspace-fail-utf-8.eml  mime-message-no-content-type.eml  msg2.eml  no-nl-link-plain.eml  no-nl-link.eml
test/test_home/: .gitignore  keybindings  searches
test/test_home/plugins/: basic.py  tagformat.py  threadindexplugin.plugin  threadindexplugin.py
tests/: CMakeLists.txt  SConscript  foo1.key  foo2.key  forktee.sh  run_test.sh  test_address.cc  test_bad_content_id.cc  test_common.hh  test_composed_message.cc  test_convert_error.cc  test_crypto.cc  test_dates.cc  test_generic.cc  test_gmime_version.cc  test_keybindings.cc  test_markdown.cc  test_mime_message.cc  test_no_newline_msg.cc  test_non_existant_file.cc  test_notmuch.cc  test_notmuch_standalone.cc  test_notmuch_standalone.sh  test_open_db.cc  test_quote_html.cc  test_setup.sh
tests/bt/: boostautotestmain.cc
tests/mail/: test_config.template  test_out_of_sync.eml
tests/mail/test_mail/: bad-content-part-id-2.eml  bad-convert-error.eml  convert_error.eml  date1.eml  date2.eml  msg1.eml  multipart.eml  no-nl-link-html.eml  no-nl.eml  only-html.eml  quote-test.eml
tests/test_home/: keybindings  signature.txt
tests/test_home/plugins/: basic.plugin  basic.py  threadindexplugin.py
ui/: .gitignore  Makefile  README.md  about.glade  acknowledgement.md  astroid.desktop  astroid.js  dev.html  edit-message.glade  email-css.js  main.js  no-mail.xcf  part.scss  stub.js  thread-view.css  thread-view.html  thread-view.js  thread-view.sass  thread-view.scss
ui/icons/: LICENSE
ui/thread-view/: .babelrc  .editorconfig  .eslintrc.js  .gitignore  LICENSE.md  README.md  package.json  rollup.config.js
ui/thread-view/src/: api.js  index.html  intersectionobserver-polyfill.js  main.js  model.js  state.js  stub.js  thread-view.js  thread-view.scss  types.js  ui.js
